--- a/ceppp_patient_partenaire/i18n/fr_CA.po
+++ b/ceppp_patient_partenaire/i18n/fr_CA.po
@@ -41,3 +41,8 @@ msgstr "Votre profil"
 #, python-format
 msgid "Your Name"
 msgstr "Votre nom"
+
+#. module: base
+#: model:res.country.state,name:base_state_ca_qc
+msgid "Quebec"
+msgstr "Québec"
