[ADD] ceppp_pp: Modifications titres

--- a/ceppp_patient_partenaire/i18n/fr_CA.po
+++ b/ceppp_patient_partenaire/i18n/fr_CA.po
@@ -27,12 +27,12 @@ msgstr "Sauvegarder"
 #: model_terms:ir.ui.view,arch_db:portal.portal_layout
 #: model_terms:ir.ui.view,arch_db:portal.portal_my_details
 msgid "Your Details"
-msgstr "Vos informations"
+msgstr "Mes informations"
 
 #. module: portal
 #: model_terms:ir.ui.view,arch_db:portal.portal_my_home
 msgid "Your Documents"
-msgstr "Votre profil"
+msgstr "Mon profil"
 
 #. module: portal
 #. openerp-web
